[package]
authors = ["The gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings of GTK 4"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gtk4_sys"
edition = "2021"
homepage = "http://gtk-rs.org/"
keywords = ["gtk", "gtk4", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gtk-4"
name = "gtk4-sys"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.5.0"
rust-version = "1.63"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.gtk4]
name = "gtk4"
version = "4.0.0"

[package.metadata.system-deps.gtk4.v4_2]
version = "4.2"

[package.metadata.system-deps.gtk4.v4_4]
version = "4.4"

[package.metadata.system-deps.gtk4.v4_6]
version = "4.6"

[package.metadata.system-deps.gtk4.v4_8]
version = "4.7"

[package.metadata.system-deps.gtk4.v4_10]
version = "4.9"

[lib]
name = "gtk4_sys"

[features]
dox = ["glib/dox", "gobject/dox", "gio/dox", "gdk_pixbuf/dox", "pango/dox", "cairo/dox", "graphene/dox", "gdk/dox", "gsk/dox"]
v4_2 = []
v4_4 = ["v4_2"]
v4_6 = ["v4_4"]
v4_8 = ["v4_6"]
v4_10 = ["v4_8"]

[dependencies]
libc = "0.2"

[dependencies.cairo]
package = "cairo-sys-rs"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[dependencies.gdk_pixbuf]
package = "gdk-pixbuf-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[dependencies.gdk]
package = "gdk4-sys"
path = "../../gdk4/sys"
version = "0.5.0"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[dependencies.graphene]
package = "graphene-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[dependencies.gsk]
package = "gsk4-sys"
path = "../../gsk4/sys"
version = "0.5.0"

[dependencies.pango]
package = "pango-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
