[package]
authors = ["The gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings of GTK 4"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gtk4_sys"
edition = "2021"
homepage = "http://gtk-rs.org/"
keywords = ["gtk", "gtk4", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gtk-4"
name = "gtk4-sys"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.4.9"
rust-version = "1.56"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.gtk4]
name = "gtk4"
version = "4.0.0"

[package.metadata.system-deps.gtk4.v4_2]
version = "4.2"

[package.metadata.system-deps.gtk4.v4_4]
version = "4.4"

[package.metadata.system-deps.gtk4.v4_6]
version = "4.6"

[package.metadata.system-deps.gtk4.v4_8]
version = "4.7"

[lib]
name = "gtk4_sys"

[features]
dox = []
v4_2 = []
v4_4 = ["v4_2"]
v4_6 = ["v4_4"]
v4_8 = ["v4_6"]

[dependencies]
libc = "0.2"

[dependencies.cairo]
package = "cairo-sys-rs"
version = "0.15.1"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.15"

[dependencies.gdk-pixbuf]
package = "gdk-pixbuf-sys"
version = "0.15.1"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.15"

[dependencies.gdk]
package = "gdk4-sys"
path = "../../gdk4/sys"
version = "0.4.9"

[dependencies.gio]
package = "gio-sys"
version = "0.15.1"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.15"

[dependencies.glib]
package = "glib-sys"
version = "0.15.1"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.15"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15.1"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.15"

[dependencies.graphene]
package = "graphene-sys"
version = "0.15.1"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.15"

[dependencies.gsk]
package = "gsk4-sys"
path = "../../gsk4/sys"
version = "0.4.9"

[dependencies.pango]
package = "pango-sys"
version = "0.15.1"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.15"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
