[package]
name = "gobject_properties_1"
version = "0.1.0"
authors = ["Julian Hofer <julianhofer@gnome.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"